# not-qtt-there-yet

./: .gitignore  LICENSE  Qtt.cabal  README.md  stack.yaml  test.tt
features/: 2+2=4.tt  basictt.tt  implicits.tt  prop-universe.tt
src/: Check.hs  Main.hs  Presyntax.hs  Qtt.hs
src/Check/: Data.hs  Fresh.hs  Monad.hs  Subsumes.hs  TypeError.hs
src/Control/Concurrent/: IO.hs
src/Data/: L.hs  Range.hs
src/Data/HashMap/: Compat.hs
src/Driver/: Query.hs  Rules.hs  WiredIn.hs
src/Driver/Editor/: Main.hs  Monad.hs  Refine.hs
src/Driver/LanguageServer/: Main.hs
src/Presyntax/: Context.hs  Lexer.hs  Parser.hs
src/Qtt/: Builtin.hs  Environment.hs  Evaluate.hs  Pretty.hs
vscode-extension/: .gitignore  package-lock.json  package.json
vscode-extension/client/: package-lock.json  package.json
vscode-extension/client/src/: main.ts
vscode-extension/syntaxes/: qtt.tmLanguage.json
