name:                Qtt
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/plt-hokusai/qtt#readme
license:             BSD3
license-file:        LICENSE
author:              Abigail Magalhães
maintainer:          magalhaes.alcantara@pucpr.edu.br
copyright:           2020 Abigail Magalhães
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Qtt
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , stm
                     , text
                     , rock
                     , some
                     , lens
                     , comonad
                     , hashable
                     , containers
                     , megaparsec
                     , transformers
                     , monad-control
                     , dependent-hashmap
                     , transformers-base
                     , unordered-containers
                     , dependent-sum-template

                     , haskell-lsp
                     , data-default
                     , haskell-lsp-types
  other-modules:       Qtt
                     , Qtt.Pretty
                     , Qtt.Builtin
                     , Qtt.Evaluate
                     , Qtt.Environment

                     , Check.TypeError
                     , Check.Subsumes
                     , Check.Fresh
                     , Check.Monad
                     , Check.Data
                     , Check

                     , Control.Concurrent.IO

                     , Driver.Query
                     , Driver.Rules
                     , Driver.WiredIn
                     , Driver.LanguageServer.Main

                     , Presyntax
                     , Presyntax.Parser
                     , Presyntax.Lexer

                     , Data.L
                     , Data.Range
                     , Data.HashMap.Compat
  ghc-options:       -Wall -Wno-name-shadowing